--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ arboard = "3.6.1"
 crossterm = "0.29.0"
 ratatui = "0.29.0"
 serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.147"
